feat: added tests for services/dynamic_prices
